--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^1.19.1",
+    "pg": "^7.12.1",
+    "sequelize": "^5.13.1",
+    "sequelize-cli": "^5.5.0"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
