--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "jest": "^24.8.0",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1",
@@ -16,6 +18,9 @@
     "sequelize-cli": "^5.5.0"
   },
   "devDependencies": {
-    "jest": "^24.8.0"
+    "babel-jest": "^24.8.0",
+    "sepia": "^2.0.2",
+    "shelljs": "^0.8.3",
+    "supertest": "^4.0.2"
   }
 }
