--- a/config/config.json
+++ b/config/config.json
@@ -21,6 +21,7 @@
     "database": "weather_for_sweaters_express_production",
     "host": "127.0.0.1",
     "dialect": "postgres",
+    "use_env_variable": "DATABASE_URL",
     "operatorsAliases": false
   }
 }
